# multiple-lights

./: CMakeLists.txt  README.md  run.sh
cmake/: clang.cmake  config.cmake  gcc.cmake  icc.cmake
docs/: index.html  presentation.md
local-thrparty/: builddeps
local-thrparty/install/cmake/: TBBConfig.cmake
local-thrparty/install/include/openvkl/: version.h
local-thrparty/install/include/openvkl/vdb/: topology.h  topology_1.h  topology_2.h  topology_3.h
local-thrparty/install/include/ospray/: version.h
local-thrparty/install/lib/: libembree3.so.3  libjsoncpp.so.1.9.4  libopenvkl.so.0  libopenvkl.so.0.9.0  libopenvkl_module_ispc_driver.so.0  libopenvkl_module_ispc_driver.so.0.9.0  libopenvkl_module_ispc_driver_16.so.0  libopenvkl_module_ispc_driver_16.so.0.9.0  libopenvkl_module_ispc_driver_4.so.0  libopenvkl_module_ispc_driver_4.so.0.9.0  libopenvkl_module_ispc_driver_8.so.0  libopenvkl_module_ispc_driver_8.so.0.9.0  libospcommon.so.1  libospcommon.so.1.3.1  libospray.so.2  libospray.so.2.1.1  libospray_imgui.so.2  libospray_imgui.so.2.1.1  libospray_module_ispc.so.2  libospray_testing.so.2  libospray_testing.so.2.1.1
local-thrparty/install/lib/cmake/embree-3.10.0/: embree-config.cmake  embree-targets-release.cmake
local-thrparty/install/lib/cmake/glfw3/: glfw3Targets.cmake
local-thrparty/install/lib/cmake/imgui/: imgui-config-noconfig.cmake  imgui-config.cmake
local-thrparty/install/lib/cmake/openvkl-0.9.0/: openvklConfig.cmake  openvklConfigVersion.cmake  openvkl_Exports-release.cmake  openvkl_Exports.cmake
local-thrparty/install/lib/cmake/ospcommon-1.3.1/: ospcommonConfig.cmake  ospcommon_Exports-release.cmake  ospcommon_Exports.cmake  ospcommon_macros.cmake
local-thrparty/install/lib/cmake/ospray-2.1.1/: osprayConfig.cmake  osprayConfigVersion.cmake  ospray_Exports-release.cmake  ospray_Exports.cmake
local-thrparty/install/lib/pkgconfig/: glfw3.pc  jsoncpp.pc
report/: Report.tex
src/: CMakeLists.txt
src/rtlibrary/: CMakeLists.txt  ModuleInit.cpp
src/rtlibrary/render/: MyMaterial.cpp  MyMaterial.h  MyMaterial.ih  MyMaterial.ispc  MyRenderer-T2.ih  MyRenderer-T2.ispc  MyRenderer-T3.ih  MyRenderer-T3.ispc  MyRenderer-T4.ih  MyRenderer-T4.ispc  MyRenderer.cpp  MyRenderer.h  MyRenderer.ih  MyRenderer.ispc
src/viewer/: ArcballCamera.cpp  ArcballCamera.h  CMakeLists.txt  GLFWOSPRayWindow.cpp  GLFWOSPRayWindow.h  imgui_impl_glfw_gl3.cpp  main.cpp
src/viewer/models/: cornell_box.mat
src/viewer/models/cornell/: CornellBox-Sphere.mtl  CornellBox-Water.mat  CornellBox-Water.mtl
src/viewer/scene/: sceneloader.cpp  sceneloader.h
